# udb

./: .gitignore  Cargo.toml  LICENSE  README.md  udb-todo.rtf
cores/shopping-debug/: Makefile  app-debug  app-debug.core  item.c  main.c
cores/shopping-release/: app-release  app-release.core  item.h  list.h
src/: main.rs  repl.rs
src/commands/: elf.rs  info.rs  misc.rs  mod.rs  tables.rs
src/commands/snapshots/: udb__commands__elf__tests__core_header.snap  udb__commands__elf__tests__core_loads.snap  udb__commands__elf__tests__core_notes.snap  udb__commands__elf__tests__core_segs.snap  udb__commands__elf__tests__exe_header.snap  udb__commands__elf__tests__exe_loads.snap  udb__commands__elf__tests__exe_notes.snap  udb__commands__elf__tests__exe_relocs.snap  udb__commands__elf__tests__exe_sections.snap  udb__commands__elf__tests__exe_segs.snap  udb__commands__elf__tests__line.snap  udb__commands__elf__tests__strings.snap  udb__commands__elf__tests__strings_35.snap  udb__commands__elf__tests__symbols.snap  udb__commands__info__tests__line1.snap  udb__commands__info__tests__line2.snap  udb__commands__info__tests__mapped.snap  udb__commands__info__tests__process.snap  udb__commands__info__tests__registers.snap  udb__commands__info__tests__registers_all.snap  udb__commands__info__tests__signals.snap  (+9 more)
src/debug/: abbrev.rs  line.rs  mod.rs  symbols.rs  types.rs
src/elf/: core.rs  elf_file.rs  elf_files.rs  header.rs  io.rs  mod.rs  notes.rs  primitives.rs  sections.rs  segments.rs
src/utils/: default.tcss  key_map.rs  mod.rs  styles.rs
(+6 files in other folders)
